<resources>
    <string name="app_name" translatable="false">Sample Project</string>
    <string name="fb_app_id" translatable="false">1354014609734951</string>
    <string name="fb_client_token" translatable="false">c4e0557554ebce2367fb88e077bd76eb</string>
    <string name="default_notification_channel_id" translatable="false">iptv_channel_id</string>
    <string name="show_lock_screen" translatable="false">IPTV Show lock screen</string>
    <string name="this_action_may_contain_advertising">This action may contain advertising</string>
    <string name="language">Language</string>
    <string name="changes_applied">Changes applied!</string>
    <string name="applying_language">Applying language…</string>
    <string name="settings">Settings</string>
    <string name="term_of_service">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="rate_app">Rate App</string>
    <string name="share">Share App</string>
    <string name="check_out_this_amazing_app">Check out this amazing app: </string>
    <string name="share_via">Share via</string>
    <string name="the_best_we_can_get">The best we can get:)</string>
    <string name="rate_us">Rate us</string>
    <string name="rate_on_google_play">Rate on Google Play</string>
    <string name="rating_description_0">We would appreciate your review!</string>
    <string name="rating_description_1_2">We want to know what made you unsatisfied.</string>
    <string name="rating_description_3">We look forward to receiving your feedback to improve.</string>
    <string name="rating_description_4">We will do our best to provide an even better experience.</string>
    <string name="rating_description_5">Your satisfaction is our greatest motivation!</string>
    <string name="thanks_for_your_rating">Thanks for your rating!</string>
    <string name="rating_title_0">Thank you for using the app!</string>
    <string name="rating_title_1_2">Oh No!</string>
    <string name="rating_title_3">Oh, unfortunately!</string>
    <string name="rating_title_4">Thank you!</string>
    <string name="rating_title_5">Wow, great!</string>
    <string name="please_rate_us">Please rate us 5 star!</string>
    <string name="exit">Exit</string>
    <string name="continues">Continue</string>
    <string name="title_onboarding_1">Stream live football</string>
    <string name="content_onboarding_1">Stay connected to your favorite teams and experience the thrill of the game on the go!</string>
    <string name="title_onboarding_2">Unlimited Channels</string>
    <string name="content_onboarding_2">Never miss a moment - unlimited action, unlimited excitement!</string>
    <string name="title_onboarding_3">Easy to Import!</string>
    <string name="content_onboarding_3">No hassle, no delays-instant access to top leagues and tournaments right on your mobile.</string>
    <string name="title_onboarding_4">Smooth &amp; Stable Streaming</string>
    <string name="content_onboarding_4">Experience fast loading and smooth playback, even on slow networks.</string>
    <string name="swipe_to_next">Swipe to Next</string>
    <string name="thank_you_for_using_the_app">Thank you for using the app</string>
    <string name="continue_">Continue</string>
    <string name="next">Next</string>
    <string name="loading_language_data">Loading language data…</string>
    <string name="all">All</string>
    <string name="feature_content_item_1">News &amp; Current Affairs</string>
    <string name="feature_content_item_2">Movies</string>
    <string name="feature_content_item_3">TV Series</string>
    <string name="feature_content_item_4">Live Sports</string>
    <string name="feature_content_item_5">Kids</string>
    <string name="feature_content_item_6">General Entertainment</string>
    <string name="nav_home">Home</string>
    <string name="feature_heater">Which type of content do you watch the most?</string>
    <string name="do_you_really_want_to_leave_the_app">Do you want to exit the app?</string>
    <string name="pick_3_of_the_most_popular_categories">Pick 3 of the most popular categories and posters to get personalized recommendations</string>
    <string name="channel">Channel</string>
    <string name="favorites">Favorites</string>
    <string name="history">History</string>
    <string name="start">Start</string>
    <string name="welcome_to_iptv_smart">Welcome to IPTV Smart</string>
    <string name="you_don_t_have_any_channels_yet">You don’t have any channels yet.</string>
    <string name="add_playlist">Add Playlist</string>
    <string name="view_the_user_guide">View the user guide</string>
    <string name="how_to_use">How to use?</string>
    <string name="search_for">Search</string>
    <string name="rename">Rename</string>
    <string name="save">Save</string>
    <string name="please_enter_name">Please enter name!</string>
    <string name="add_channel">Add channel</string>
    <string name="cancel">Cancel</string>
    <string name="enter_playlist_name">Enter playlist name</string>
    <string name="no_videos_selected">No videos selected</string>
    <string name="playlist_name_required">Playlist name is required</string>
    <string name="failed_to_save_playlist">Failed to save playlist</string>
    <string name="no_file_selected">No file selected</string>
    <string name="no_channels_found">No channels found in file</string>
    <string name="failed_to_parse_file">Failed to parse file</string>
    <string name="url_required">URL is required</string>
    <string name="failed_to_parse_url">Failed to parse URL</string>
    <string name="no_internet">No Internet</string>
    <string name="please_check_your_network_settings_and_try_again">Please check your network settings and try again.</string>
    <string name="try_again">Try Again</string>
    <!-- IAP Screen -->
    <string name="iap_feature_no_ads">No more ads</string>
    <string name="iap_feature_unlimited">Enjoy unlimited channels</string>
    <string name="iap_feature_organize">Easily organize your channels</string>
    <string name="premium">Premium</string>
    <!-- Paywall Bottom Sheet -->
    <string name="please_select_at_least_category">Please select at least 3 category</string>
    <string name="tv_noti_header_home">Live TV Is Ready 🔴</string>
    <string name="tv_noti_content_home"> Your favorite channels are just one tap away.</string>
    <string name="tv_noti_content_quit"> You might miss something live. Tap to continue watching.</string>
    <string name="tv_noti_header_quit">Live TV Is Happening Now 👀</string>
    <string name="skip">Skip</string>
    <string name="des_1">Your favorite channels are streaming now.</string>
    <string name="cta_1">Watch Now</string>
    <string name="des_2">News, sports, movies — don’t miss a second.</string>
    <string name="cta_2">Watch Now</string>
    <string name="des_3">Hundreds of live channels &amp; VOD ready for you.</string>
    <string name="cta_3">📺 Open IPTV</string>
    <string name="des_4">Latest movies &amp; TV shows are available.</string>
    <string name="cta_4">Start Watching</string>
    <string name="des_5">Jump in and enjoy instant entertainment.</string>
    <string name="cta_5">Open App</string>
    <string name="now">Now</string>
    <string name="to_send_you_notifications"> to send you notifications</string>
    <string name="allow">Allow</string>
    <string name="notification_permission">Notification Permission</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
