<?xml version="1.0" encoding="utf-8"?>
<com.dong.baselib.widget.layout.UiLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_12sdp"
    android:orientation="vertical"
    android:padding="@dimen/_12sdp"
    app:bgColor="#303136"
    app:cornerRadius="@dimen/_20sdp">

    <ImageView
        android:id="@+id/icClose"
        android:layout_width="@dimen/_24sdp"
        android:layout_height="@dimen/_24sdp"
        android:layout_gravity="end"
        android:gravity="end"
        android:rotation="45"
        android:src="@drawable/ic_app_add"
        app:tint="@color/color_cccccc" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rb_600"
        android:text="@string/rename"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp" />

    <com.dong.baselib.widget.view.UiEditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:fontFamily="@font/rb_400"
        android:gravity="center_vertical"
        android:hint="@string/enter_playlist_name"
        android:includeFontPadding="false"
        android:maxLines="1"
        android:paddingHorizontal="@dimen/_12sdp"
        android:paddingVertical="@dimen/_14sdp"
        android:singleLine="true"
        android:text=""
        android:textColor="@color/white"
        android:textColorHint="@color/color_cccccc"
        android:textSize="@dimen/_12sdp"
        app:cornerRadius="@dimen/_12sdp"
        app:drawableSize="@dimen/_16sdp"
        app:edtTextColor="@color/white"
        app:focusStrokeGradient="#0061FF #60EFFF"
        app:strokeGradientColors="#1AFFFFFF #1AFFFFFF"
        app:strokeWidth="@dimen/_1sdp" />

    <com.dong.baselib.widget.view.UiTextView
        android:id="@+id/btnSave"
        style="@style/ButtonAppStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_12sdp"
        android:fontFamily="@font/rb_600"
        android:includeFontPadding="false"
        android:padding="@dimen/_12sdp"
        android:text="@string/save"
        android:textSize="@dimen/_12sdp" />
    <com.dong.baselib.widget.layout.UiFrameLayout
        android:id="@+id/flNativeAd"
        app:cornerRadius="@dimen/_6sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp">

        <include
            android:id="@+id/shimmerMediaLeft"
            layout="@layout/layout_native_shimmer_small_cta_right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.dong.baselib.widget.layout.UiFrameLayout>
</com.dong.baselib.widget.layout.UiLinearLayout>