<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundApp"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llAppBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_weight="1"
            android:fontFamily="@font/rb_500"
            android:includeFontPadding="false"
            android:text="@string/feature_heater"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvContentData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:text="@string/pick_3_of_the_most_popular_categories"
        android:textColor="@color/color_cccccc" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvFeature"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_weight="1"
        app:layoutManager="com.dong.baselib.widget.flexbox.FlexboxLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/txtContinue"
        app:layout_constraintTop_toBottomOf="@+id/llAppBar"
        tools:listitem="@layout/item_feature_view" />

    <TextView
        android:id="@+id/txtContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8sdp"
        android:fontFamily="@font/rb_500"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/continues"
        android:textColor="#86909c"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toTopOf="@id/flNativeAd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.dong.baselib.widget.layout.UiFrameLayout
        android:id="@+id/flNativeAd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <include
            android:id="@+id/shimmerMediaLeft"
            layout="@layout/layout_native_shimmer_media_left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <include
            android:id="@+id/shimmerMediaBottom"
            layout="@layout/layout_native_shimmer_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <include
            android:id="@+id/shimmerNoMedia"
            layout="@layout/layout_native_shimmer_small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />
    </com.dong.baselib.widget.layout.UiFrameLayout>
</LinearLayout>
