<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <com.dong.baselib.widget.layout.UiConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginVertical="@dimen/_12sdp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_16sdp"
        app:bgColorAll="@color/color_303136"
        app:cornerRadius="@dimen/_18sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_12sdp"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/rb_500"
                android:includeFontPadding="false"
                android:text="@string/do_you_really_want_to_leave_the_app"
                android:textAlignment="center"
                android:textColor="@color/primary"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_18sdp"
                android:orientation="vertical"
                android:weightSum="2">

                <com.dong.baselib.widget.view.UiTextView
                    android:id="@+id/btnExit"
                    style="@style/ButtonAppStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/rb_500"
                    android:paddingVertical="@dimen/_12sdp"
                    android:text="@string/exit"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"
                    app:bgGdOrientation="left_right"
                    app:bgIsGradient="true"
                    app:cornerRadius="@dimen/_20sdp"
                    app:tvColor="@color/white" />

                <com.dong.baselib.widget.view.UiTextView
                    android:id="@+id/btnCancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:layout_weight="1"
                    android:fontFamily="@font/rb_500"
                    android:paddingVertical="@dimen/_12sdp"
                    android:text="@string/cancel"
                    app:bgColors="@array/rainbow_colors"
                    android:textAlignment="center"
                    android:textSize="@dimen/_12sdp"
                    app:cornerRadius="@dimen/_10sdp"
                    app:strokeWidth="@dimen/_1sdp"
                    app:tvColor="@color/color_cccccc" />
            </LinearLayout>
        </LinearLayout>
    </com.dong.baselib.widget.layout.UiConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
